--- a/index.html
+++ b/index.html
@@ -1,27 +1,12 @@
 <!DOCTYPE html>
-<html lang="en"> <!--Optimiza la busqueda y le avisa a google que utilizamos html -->
-  <head>
-    <meta charset="utf-8">
-    <<meta http-equiv="X-UA-compatible" content="IE=edge">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  </head>
-  <body>
-    <h1>Este es h1</h1>
-    <h2>Este es h2</h2>
-    <h3>Este es h3</h3>
-    <h4>Este es h4</h4>
-    <h5>Este es h5</h5>
-    <h6>Este es h6</h6>
-    <!-- <p> Es para crear parrafos -->
-      <p> Lorem ipssfbisbivuebvubeiobibnienibeibniebnioenoinreobnoenbvenrobeorvb
-        eornvienbienrbeonboenbvoenrobn</p>
-
-        <div style="background-color: blue;"> <!--Es un elemento de bloque y esta intando el fondo -->
-          <p> Lorem ipssfbisbivuebvubeiobibnienibeibniebnioenoinreobnoenbvenrobeorvb
-            eornvienbienrbeonboenbvoenrobn</p>
-
-            </div>
-    <span style ="background-color: aquamarine">Adios</span>
-    <a href= "http://www.google.com">Este es un enlace </a>
-  </body>
+</head>
+<body>
+    
+</body>
 </html>
